<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.anacoimbra.android.financesapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/registerTransaction"
            app:destination="@id/navigation_register_transaction"
            app:popUpTo="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register_transaction"
        android:name="com.anacoimbra.android.financesapp.ui.transaction.RegisterTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/register_transaction_fragment" />


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anacoimbra.android.financesapp.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.anacoimbra.android.financesapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>