<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_default"
    tools:context=".ui.transaction.RegisterTransactionFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/transactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/expense"
            style="?materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkable="true"
            android:text="@string/expense" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/income"
            style="?materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkable="true"
            android:text="@string/income" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerTransactionCategory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_micro"
        android:hint="@string/transaction_category">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/registerTransactionCategoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_micro"
        android:hint="@string/transaction_description"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerTransactionDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences"
            tools:text="@tools:sample/lorem/random" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerTransactionDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_micro"
        android:hint="@string/transaction_date"
        app:boxBackgroundMode="outline"
        app:endIconContentDescription="@string/open_calendar"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerTransactionDateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            tools:text="@tools:sample/date/ddmmyy" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_micro"
        android:hint="@string/transaction_amount"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerTransactionAmountInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            tools:text="10.00" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateTransaction"
        style="?materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_transaction_button" />

</androidx.appcompat.widget.LinearLayoutCompat>